# ngin-r-ecu-rust-fw

./: Cargo.toml  README.md  memory.x  openocd.gdb
.cargo/: config.toml
crates/bsp_stm32h7/: Cargo.toml  build.rs
crates/bsp_stm32h7/examples/: test_analog.rs  test_ignition.rs  test_injector.rs  test_sensors.rs
crates/bsp_stm32h7/src/: ignition.rs  injector.rs  lib.rs  pinout.rs  sensors.rs
crates/ecu_traits/: Cargo.toml
crates/ecu_traits/src/: engine_io.rs  lib.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: decoder.rs  fuel_model.rs  lib.rs  tables.rs
crates/engine_core/src/decoders/: missing_tooth.rs  mod.rs
crates/engine_core/tests/: test_decoder.rs  test_fuel_model.rs  test_interpol.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/examples/: test_ckp.rs
firmware/src/: main.rs
src/: main.rs
