[package]
name = "ngin-r-rust-rtic"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
rtic = { version = "2.2.0", features = ["thumbv7-backend"]}
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick"] }
rtt-target = "0.6.2"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h750v", "rt"] }
