[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[package.metadata.cortex-m-rt]
memory-x = "memory.x"

[dependencies]
# Dependencias internas
ecu_traits = { path = "../crates/ecu_traits" }
engine_core = { path = "../crates/engine_core" }
bsp_stm32h7 = { path = "../crates/bsp_stm32h7", package = "bsp_stm32h7" }
telemetry = { path = "../crates/telemetry", package = "telemetry" }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "0.2.7"
panic-halt = "1.0.0"
rtic = { version = "2.2.0", features = ["thumbv7-backend"]}
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick"] }
rtt-target = "0.6.2"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h750v", "rt"] }
